generated/checkers/refine/KN-Buffer-Overflow-c6087b82-8/build_logs/syntax-repair-refine-2-2/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::getLenArgRegionOrSymbol(const clang::Expr*, clang::ento::CheckerContext&, const clang::ento::MemRegion*&, const clang::ento::SymExpr*&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:160:38: error: ‘class clang::ento::SValBuilder’ has no member named ‘getLValue’; did you mean ‘getMinValue’?
  160 |         SVal LV = C.getSValBuilder().getLValue(VD, C.getLocationContext());
      |                                      ^~~~~~~~~
      |                                      getMinValue
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
